# school-21

ft_ls/: Makefile  ft_ls
ft_ls/libft/: Makefile  ft_bzero.c  ft_free_list.c  ft_isalnum.c  ft_lst_push_b.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memchr.c  ft_memcpy.c  ft_memdel.c  ft_memset.c  ft_printf.c  ft_realloc.c  ft_strclr.c  ft_strcmp.c  ft_strequ.c  ft_strjoin.c  ft_strlcat.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strnew.c  ft_strrev.c  ft_strsplit.c  ft_strsub.c  libft.h
ft_ls/sources/: errors.c  ft_ls.h  main.c
ft_printf_git/srcs/: float.c  ft_printf.c  ft_printf.h  libft_f1.c  libft_f2.c  libft_f3.c  libft_f5.c  print_c.c  print_f.c  print_f2.c  print_l.c  print_l2.c  print_o.c  print_o2.c  print_p.c  print_s.c  print_x.c  printf_d.c  printf_d2.c  printf_u.c  utils.c  (+4 more)
get_next_line/: get_next_line.c  get_next_line.h
lem_in/: CMakeLists.txt  errors.c  free.c  ft_strsplit.c  lem_in.h  libft_functions.c  libft_functions_2.c  libft_functions_3.c  main.c  parser.c  pathfinding.c  send_ants.c  set_links.c  set_rooms.c  trash.c  utils.c
libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_check_on_bits.c  ft_itoa_base.c  ft_lstmap.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_realloc.c  ft_sqrt.c  ft_strcat.c  ft_strchr.c  ft_strdel.c  ft_strdup.c  ft_striteri.c  ft_strnew.c  ft_strsplit.c  ft_strtrim.c  get_next_line.c  get_next_line.h  libft.h
test/: Makefile
test2/: Makefile  author
(+65 files in other folders)
